--- a/src/app/pages/info/about/about.component.html
+++ b/src/app/pages/info/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="p-5 mb-4 bg-light rounded-3 shadow-sm">
     <div class="container-fluid py-5 text-center">
       <h1 class="display-4 fw-bold"><i class="bi bi-info-circle-fill me-2"></i>Sobre o Jobs Memory</h1>
-      <p class="fs-4">Sua bússola no universo da aplicações em empregos!</p>
+      <p class="fs-4">Ser a sua bússola no universo da aplicações em empregos!</p>
       <p>Jobs Memory nasceu da necessidade de simplificar e organizar o processo, muitas vezes caótico, de se candidatar a vagas. Queremos que você tenha total controle e clareza sobre cada passo da sua jornada profissional.</p>
     </div>
   </div>
@@ -10,8 +10,8 @@
   <div class="row align-items-md-stretch">
     <div class="col-md-6 mb-4">
       <div class="h-100 p-5 text-white bg-primary rounded-3 shadow">
-        <h2><i class="bi bi-bullseye me-2"></i>Nossa Missão</h2>
-        <p>Melhorar para você, candidato(a), com uma ferramenta intuitiva e poderosa para gerenciar suas candidaturas, maximizando suas chances de sucesso e reduzindo o estresse da busca por uma nova oportunidade. 🎯</p>
+        <h2><i class="bi me-2"></i>Nossa Missão</h2>
+        <p>Melhorar para você, candidato(a), com uma ferramenta intuitiva e poderosa para gerenciar suas candidaturas, maximizando suas chances de sucesso e reduzindo o estresse da busca por uma nova oportunidade.</p>
       </div>
     </div>
     <div class="col-md-6 mb-4">
@@ -25,7 +25,7 @@
           <li>📈 Visualizar estatísticas e tendências sobre suas aplicações.</li>
           <li>🖼️ Personalizar seu perfil (em breve!).</li>
         </ul>
-        <p>Tudo pensado para que sua única preocupação seja brilhar nas entrevistas! ✨</p>
+        <p>Tudo pensado para que sua única preocupação seja brilhar nas entrevistas! </p>
       </div>
     </div>
   </div>
