--- a/src/app/pages/info/changelog/changelog.component.html
+++ b/src/app/pages/info/changelog/changelog.component.html
@@ -8,7 +8,7 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOne">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          <strong>🎉 Versão 1.1.0 (07/05/2025) - Melhorias de Navegação e Informação!</strong>
+          <strong>Versão 1.1.0 (07/05/2025) - Melhorias de Navegação e Informação!</strong>
         </button>
       </h2>
       <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#changelogAccordion">
@@ -26,7 +26,7 @@
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingTwo">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          <strong>🚀 Versão 1.0.0 (01/04/2025) - Lançamento Inicial!</strong>
+          <strong>Versão 1.0.0 (01/04/2025) - Lançamento Inicial!</strong>
         </button>
       </h2>
       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#changelogAccordion">
