--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,15 +11,15 @@
           formControlName="username"
           inputName="username"
           type="text"
-          label="Username"
-          placeholder="Digite seu Username">
+          label="Usuário"
+          placeholder="Digite seu Usuário">
           <img src="../../assets/Frame-Mail.svg" alt="Email">
       </app-primary-input>
       <app-primary-input
           formControlName="password"
           inputName="password"
           type="password"
-          label="Your Password"
+          label="Sua senha"
           placeholder="Digite sua senha">
           <img src="../../assets/Frame-Lock.svg" alt="Senha">
     </app-primary-input>
