--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -23,6 +23,6 @@
           placeholder="Digite sua senha">
           <img src="../../assets/Frame-Lock.svg" alt="Senha">
     </app-primary-input>
-    <span>Forgot password?</span>
+    <span>Esqueceu?</span>
     </form>
 </app-default-login-layout>
