--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -11,16 +11,16 @@
           formControlName="username"
           inputName="username"
           type="text"
-          label="Username"
-          placeholder="Your username">
+          label="Usuário"
+          placeholder="Digite o nome desejado">
           <img src="../../assets/Frame-Mail.svg" alt="Username">
       </app-primary-input>
       <app-primary-input
           formControlName="password"
           inputName="password"
           type="password"
-          label="Your Password"
-          placeholder="Your password">
+          label="Senha"
+          placeholder="Digite a senha desejada">
           <img src="../../assets/Frame-Lock.svg" alt="Password">
     </app-primary-input>
     </form>
