--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,7 +1,7 @@
 <app-default-login-layout
   title="Sign in and start memorizing!"
-  primaryBtnText="Sign-Up Now"
-  secondaryBtnText="Login Now"
+  primaryBtnText="Registrar"
+  secondaryBtnText="Fazer Login"
   (submit)="submit()"
   (navigate)="navigate()"
   [disablePrimarybtn]="!signupForm.valid"
