--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <app-default-login-layout
   title="Log in and start memorizing!"
-  primaryBtnText="Login Now"
-  secondaryBtnText="Sing-Up"
+  primaryBtnText="Fazer Login"
+  secondaryBtnText="Registre-se"
   (submit)="submit()"
   (navigate)="navigate()"
   [disablePrimarybtn]="!loginForm.valid"
